# PDielec

./: .gitignore  .pylintrc  CHANGES  LICENSE.txt  MANIFEST.in  Makefile  README.adoc  README.md  TODO  ToDo.txt  after_installation.txt  before_installion.txt  benchmarks.xlsx  checkcsv  checkexcel  conda_installs.txt  example.pckl  examples_timings.xlsx  graphdatagenerator  graphdatagenerator.py  inno.txt  installation.md  layout.md  newpickletest3.pickle  newpickletest4.pickle  p1reader  p2cif  p2cif.py  package_installation.md  pdcompare  pdcompare.py  pdgui  pdgui.iss  pdgui.py  pdgui.spec  pdielec  pdielec.py  pdielec.serial  pdmake  phonana  (+14 more)
API/: conf.py  index.rst
Bugs/: README
BuildDocs/: Application_Notes_1.md  Makefile  Program_Details_and_Examples.md  Theory.md  ignores.dic  index.md  madoko.mk  pdgui.md  pdielec.bib  phonana.md  preader.md  style.mdk
Documentation/: Application_Notes_1.html  Developments.docx  Phonopy_example.md  Program_Details_and_Examples.docx  Theory.html  citation.docx  index.html  pdgui.html  phonana.html  preader.html  timings.xlsx
Example/: Makefile  OUTCAR
Examples/: Makefile  Makefile.mk  README.md
Examples/ATR/: README.md
Examples/AbInit/: README.md
Examples/Castep/: README.md
Examples/Crystal/: README  README.md
Examples/Experiment/: README.md
Examples/Gulp/: README.md
Examples/Helper/: README.md
Examples/Mie/: README.md
Examples/P2Cif/: Makefile  README.md  all.ref.cif  command.pdmake  command.sh  files
Examples/Phonopy/: README.md
Examples/QE/: README.md
Examples/SingleCrystal/: README.md
Examples/SizeEffects/: README.md
Examples/Vasp/: README.md
Examples/VibAnalysis/: README.md
PDielec/: AbinitOutputReader.py  Calculator.py  CastepOutputReader.py  Constants.py  CrystalOutputReader.py  DielectricFunction.py  ExperimentOutputReader.py  GTMcore.py  GenericOutputReader.py  GulpOutputReader.py  HelperRoutines.py  IO.py  Materials.py  MaterialsDataBase.xlsx  Mie.py  PhonopyOutputReader.py  Plotter.py  PrimitiveCell.py  QEOutputReader.py  SuperCell.py  UnitCell.py  Utilities.py  VaspOutputReader.py  VibAnalysis.py  ViewerClass.py  __init__.py  checkcsv.py  checkexcel.py  graphdatagenerator.py  p1reader.py  p2cif.py  pdcompare.py  pdgui.py  pdmake  pdmake.py  phonopy_pdielec_born.py  pickled_reader.py  preader.py  refractive_indices.xlsx  ruff.toml  (+3 more)
PDielec/Example/: Makefile  POSCAR  POTCAR.index  README
PDielec/GUI/: AnalysisTab.py  App.py  CrystalScenarioTab.py  DataBase.py  EditLayerWindow.py  FitterTab.py  MainTab.py  NoteBook.py  OpenGLWidget.py  PlottingTab.py  PowderScenarioTab.py  ScenarioTab.py  SettingsTab.py  SingleCrystalLayer.py  SingleCrystalScenarioTab.py  SingleCrystalTab.py  SingleCrystalTab.py.tmp  SpreadSheetManager.py  ViewerTab.py  __init__.py
PDielec/Tests/: error_with_QForm.py  test_gtm.py  test_io  test_numpy_1  test_numpy_2  test_numpy_3  test_parallel  test_ttm.py
Python/: AbinitOutputReader.py  Calculator.py  CastepOutputReader.py  Constants.py  CrystalOutputReader.py  DielectricConstant.py  ExperimentOutputReader.py  GenericOutputReader.py  GulpOutputReader.py  PhonopyOutputReader.py  Plotter.py  QEOutputReader.py  UnitCell.py  Utilities.py  VaspOutputReader.py  ViewerClass.py  test_io  test_numpy_1  test_numpy_2  test_numpy_3
Python/GUI/: AnalysisTab.py  App.py  FitterTab.py  FitterTabDeveloping.py  MainTab.py  NoteBook.py  OpenGLWidget.py  PlottingTab.py  ScenarioTab.py  SettingsTab.py  SpreadSheetManager.py  ViewerTab.py  script.py  temp.xlsx
Python/PyMieScatt/: Acknowledgement  Inverse.py  Mie.py  __init__.py.old
Python/pyqt/: App.py  MainTab.py  NoteBook.py  PlottingTab.py  Python  ScenarioTab.py  SettingsTab.py  phonon.castep  phonon.param  (+3 more)
Sphinx/: AlN-application-note.qti  Comparison_of_incoherence_methods.qti  Makefile  README  SingleCrystalGeometry.pptx  SpeedUp.qti  analysis.rst  application_notes_1.rst  application_notes_2.rst  application_notes_3.rst  cloud_sptheme-ext-index_styling.py  conf.py  index-latex.rst  index.rst  installation.rst  introduction.rst  jinja_PatchFile  l-alanine-application-note.qti  latex_preamble.txt  make.bat  pdgui.rst  pdielec.bib  pdielec3.yaml  preamble.txt  requirements.txt  sapphire-application-note.qti  single_crystal_application_notes.qti  software.rst  theory.rst  theory_powder.rst  theory_single_crystal.rst
docs/: .buildinfo  .gitignore  Application_Notes_1.md  Makefile  PDielec.GUI.html  PDielec.html  Program_Details_and_Examples.md  Theory.md  analysis.html  application_notes_1.html  application_notes_2.html  application_notes_3.html  genindex.html  ignores.dic  index-latex.html  index.html  index.md  installation.html  introduction.html  jk-numeric.csl  madoko.mk  modules.html  objects.inv  pdgui.html  pdielec.bib  pdielec.html  preader.html  py-modindex.html  search.html  searchindex.js  software.html  tablesAndFigures.html  theory.html  theory_powder.html  theory_single_crystal.html  zreferences.html
(+994 files in other folders)
